--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -3,16 +3,6 @@ name: Build and Deploy to GKE
 on:
   push:
     branches: [ "homolog" ]
-
-env:
-  PROJECT_ID: ${{ secrets.GKE_PROJECT }}
-  GAR_LOCATION: us-central1 # TODO: update region of the Artifact Registry
-  GKE_CLUSTER: cluster-1    # TODO: update to cluster name
-  GKE_ZONE: us-central1-c   # TODO: update to cluster zone
-  DEPLOYMENT_NAME: gke-test # TODO: update to deployment name
-  REPOSITORY: samples # TODO: update to Artifact Registry docker repository
-  IMAGE: static-site
-
 jobs:
   deploy:
     name: Setup Gcloud Account
@@ -27,7 +17,7 @@ jobs:
       uses: actions/checkout@v2
 
       # Login GCP
-      uses: 'google-github-actions/setup-gcloud@v0.2.0'
+    - uses: 'google-github-actions/setup-gcloud@v0.2.0'
       with:
         service_account_key: ${{secrets.GCP.CREDENTIALS}}
         project_id : ${{secrets.GCP.PROJECT.ID}}
