--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -7,7 +7,7 @@ jobs:
   deploy:
     name: Setup Gcloud Account
     runs-on: ubuntu-latest
-    environment: gcp-homolog
+    environment: gcp-prod
     env:
       IMAGE_NAME: gcr.io/${{ secrets.GCP.PROJECT.ID }}/site:latest
       
